--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <%= render "partials/nav" %>
+
     <%= yield %>
+
+    <%= render "partials/footer" %>
   </body>
 </html>
