--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -1,6 +1,1 @@
-<h1>User#home</h1>
-<p>Find me in app/views/user/home.html.erb</p>
-<p>
-    The current time is
-    <%= @current_time %>
-</p>
+<h1>Welcome to the Adnat Dashboard</h1>
