--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,1 +1,35 @@
-<h1>This is the partial nav</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            
+            <h1>Adnat</h1>
+            <p>Dashboard</p>
+            <%# <%= link_to "Find-A-Planner", index_path, class: "navbar-brand mt-2 mt-lg-0" %>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <%# <%= link_to "Products", products_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%# <%= link_to "How To", howto_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%# <%= link_to "Planners", planners_path, class: "nav-link" %>
+                </li>
+                <%# <% if admin_signed_in? %>
+                    <li class="nav-item">
+                        <%# <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
+                    </li>
+                <%# <% end %>
+            </ul>
+        </div>
+        <div class="d-flex align-items-center">
+            <% if user_signed_in? %>
+                <%= link_to "Edit Account", edit_user_registration_path, class:"text-reset me-3"%>
+                <%= link_to "Logout", destroy_user_session_path, :method => :delete, class:"text-reset me-3"%>
+            <% else %>
+                <%= link_to "Sign up", sign_up_path, class: "text-reset me-3" %>
+                <%= link_to "Sign In", sign_in_path, class: "text-reset me-3" %>
+            <% end %>
+        </div>
+    </div>
+</nav>
