added an edit field for the user to change their name

--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -1,1 +1,43 @@
 <h1>Welcome to the Adnat Dashboard</h1>
+
+<p>Logged in as XXXX</p>
+
+<h2>Organisation XXXX</h2>
+
+<a>View Shifts</a>
+<a>Edit</a>
+<a>Leave</a>
+
+<table>
+    <%# Table headings %>
+    <tr>
+        <th>Employee name</th>
+        <th>Shift date</th>
+        <th>Start time</th>
+        <th>Finish time</th>
+        <th>Break length (minutes)</th>
+        <th>Hours worked</th>
+        <th>Shift cost</th>
+    </tr>
+
+    <%# Table data row 1 %>
+    <tr>
+        <td>coloumn 1</td>
+        <td>coloumn 2</td>
+        <td>coloumn 3</td>
+        <td>coloumn 4</td>
+        <td>coloumn 5</td>
+        <td>coloumn 6</td>
+        <td>coloumn 7</td>
+    </tr>
+
+</table>
+
+
+<%# Add these to css file %>
+
+<%# table, th, td {
+    padding: 10px;
+    border: 1px solid black;
+    border-collapse: collapse;
+} %>
