not sure. stay tuned

--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -1,8 +1,8 @@
 <h1>Welcome to the Adnat Dashboard</h1>
 
-<p>Logged in as XXXX</p>
+<%= "Logged in as #{@id}" %></br>
 
-<h2>Organisation XXXX</h2>
+<%= "Organisation #{}" %></br>
 
 <a>View Shifts</a>
 <a>Edit</a>
@@ -20,19 +20,12 @@
         <th>Shift cost</th>
     </tr>
 
-    <%# Table data row 1 %>
-    <tr>
-        <td>coloumn 1</td>
-        <td>coloumn 2</td>
-        <td>coloumn 3</td>
-        <td>coloumn 4</td>
-        <td>coloumn 5</td>
-        <td>coloumn 6</td>
-        <td>coloumn 7</td>
-    </tr>
 
 </table>
 
+    <% 10.times do |n| %>
+        <%= "#{n}" %>
+    <% end %>
 
 <%# Add these to css file %>
 
