lots of user controller functions

--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -1,8 +1,7 @@
 <h1>Welcome to the Adnat Dashboard</h1>
 
-<%= "Logged in as #{@id}" %></br>
-
-<%= "Organisation #{}" %></br>
+<h2><%= "Logged in as #{@id}" %></h2>
+<h2><%= "Organisation #{}" %></h2>
 
 <a>View Shifts</a>
 <a>Edit</a>
@@ -19,13 +18,10 @@
         <th>Hours worked</th>
         <th>Shift cost</th>
     </tr>
-
+    <%# <% @user.each do |user| %>
 
 </table>
 
-    <% 10.times do |n| %>
-        <%= "#{n}" %>
-    <% end %>
 
 <%# Add these to css file %>
 
