--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -7,20 +7,7 @@
 <a>Edit</a>
 <a>Leave</a>
 
-<table>
-    <%# Table headings %>
-    <tr>
-        <th>Employee name</th>
-        <th>Shift date</th>
-        <th>Start time</th>
-        <th>Finish time</th>
-        <th>Break length (minutes)</th>
-        <th>Hours worked</th>
-        <th>Shift cost</th>
-    </tr>
-    <%# <% @user.each do |user| %>
-
-</table>
+<%= render "partials/form" %>
 
 
 <%# Add these to css file %>
